# rust-social-app

./: .env  Cargo.toml
migrations/: 001_initial.sql  002_add_user.sql
src/: config.rs  lib.rs  main.rs
src/http/: error.rs  extractor.rs  mod.rs  profiles.rs  users.rs  validator.rs
